# solo

./: Cargo.toml  LICENSE  README-en.md  README-zh.md  README.md  clippy.toml  x.py
.cargo/: config.toml
.github/workflows/: release.yml
solo/: Cargo.toml  build.rs
solo-lib/: Cargo.toml
solo-lib/src/: client.rs  error.rs  lib.rs  util.rs
solo-lib/src/sdk/: mod.rs
solo-lib/src/sdk/aliyun/: ecs.rs  mod.rs  sas.rs  swas.rs  util.rs
solo-lib/src/sdk/qcloud/: cvm.rs  lighthouse.rs  mod.rs  util.rs  vpc.rs
solo-lib/src/sdk/rainyun/: mod.rs  rcs.rs  util.rs
solo-lib/src/util/: mod.rs
solo/locales/: app.yml
solo/src/: cli.rs  consts.rs  exec.rs  ipfetcher.rs  main.rs  report.rs  version.rs
solo/src/cli/: conf.rs  conf_new.rs  config.rs  config_new.rs  go.rs  mod.rs  util.rs  version.rs
solo/src/config/: definition.rs  mod.rs  new.rs  reader.rs  serde.rs
solo/src/exec/: ipfetcher.rs  mod.rs  report.rs
solo/src/exec/notification/: mod.rs  qmsg.rs  smtp.rs  system.rs
solo/src/exec/sdk/: aliyun.rs  mod.rs  qcloud.rs  rainyun.rs
solo/src/notification/: error.rs  mod.rs  qmsg.rs  smtp.rs  system.rs
solo/src/sdk/: aliyun.rs  mod.rs  qcloud.rs  rainyun.rs
