[workspace]
members = ["solo", "solo-lib"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
sys-locale = "0.3.2"
rust-i18n = "3.1.5"
unicode-width = "0.2.1"
anyhow = "1.0.98"
lazy_static = "1.5.0"
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls-native-roots",
    "json",

    "stream",
] }
serde_json = "1.0.141"
chrono = "0.4.41"
futures = "0.3.31"
futures-util = "0.3.31"
cnxt = { version = "0.1.6", features = ["conditional-coloring"] }
lettre = { version = "0.11.17", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
    "ring",

    "smtp-transport",
    "builder",
] }
toml = "0.9.5"
rand = "0.9.2"
crossterm = "0.29.0"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
percent-encoding = "2.3.1"
sha2 = "0.10.9"
thiserror = "2.0.12"

# Windows Only
tauri-winrt-notification = "0.7.2"
opener = "0.8.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
incremental = false
overflow-checks = false
debug = false
debug-assertions = false
