[workspace]
members = ["solo", "solo-lib"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
sys-locale = "0.3.2"
rust-i18n = "3.1.5"
unicode-width = "0.2.2"
anyhow = "1.0.101"
lazy_static = "1.5.0"
serde_json = "1.0.149"
chrono = "0.4.43"
futures = "0.3.31"
futures-util = "0.3.31"
cnxt = { version = "0.1.6", features = ["conditional-coloring"] }
toml = "0.9.8"
rand = "0.9.2"
crossterm = "0.29.0"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
percent-encoding = "2.3.2"
sha2 = "0.10.9"
thiserror = "2.0.18"

# Windows Only
tauri-winrt-notification = "0.7.2"
opener = "0.8.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
incremental = false
overflow-checks = false
debug = false
debug-assertions = false
