[package]
name = "solo-lib"
description = "Library for the Solo tool, an app for cloud safety."
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Lance <me@lance.fun>"]
repository = "https://github.com/cnlancehu/solo"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
hashbrown = "0.15.3"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
percent-encoding = "2.3.1"
rand = "0.9.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls-native-roots",
    "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
