[package]
name = "solo-lib"
description = "Library for the Solo tool, an app for cloud safety."
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
authors = [ "Lance <me@lance.fun>",]
documentation = "https://solo.lance.fun"
repository = "https://github.com/cnlancehu/solo"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
