[package]
name = "solo"
description = "An port management app for cloud safety."
version = "0.2.4"
edition = "2024"
license = "Apache-2.0"
authors = ["Lance <me@lance.fun>"]
documentation = "https://solo.lance.fun"
repository = "https://github.com/cnlancehu/solo"

[dependencies]
solo-lib = { path = "../solo-lib" }
tokio = { workspace = true }
serde = { workspace = true }
sys-locale = { workspace = true }
rust-i18n = { workspace = true }
unicode-width = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
cnxt = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
crossterm = { workspace = true }

lettre = { version = "0.11.17", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
    "aws-lc-rs",
    "smtp-transport",
    "builder",
] }
reqwest = { version = "0.13.2", features = [
    "query",
    "json",
    "stream",
] }

[build-dependencies.chrono]
workspace = true

[target."cfg(windows)".dependencies]
tauri-winrt-notification = { workspace = true }
opener = { workspace = true }
